Adding show experiment configuration page. Fix #58. Refactoring code

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -155,6 +155,7 @@
     <script src='{% static "js/jquery.cookie.js" %}'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/knockout/{{knockout_version}}/knockout-min.js'></script>
     <script src='{% static "js/ko/knockout.mapping.min.js" %}'></script>
+    <script src='{% static "js/ko/knockout.helper.js" %}'></script>
     <script src='{% static "js/common.js" %}'></script>
     <script src="//cdn.ravenjs.com/{{ravenjs_version}}/jquery,native/raven.min.js"></script>
     <script>
