--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -163,12 +163,13 @@
             function clonedExperimentConfigurationCallback(data) {
                 if (data.success) {
                     clonedExperimentConfiguration = ko.mapping.fromJS(data.experiment_configuration);
-
                     ko.utils.arrayForEach(model.experimentMetadataList(), function(item) {
                         if(item.pk() == clonedExperimentConfiguration.experiment_metadata_pk()) {
                             item.configurations.push(clonedExperimentConfiguration);
                         }
                     });
+                    console.debug("Cloned experiment configuration:");
+                    console.debug(clonedExperimentConfiguration);
                 }
             }
             function deleteExperimentConfigurationCallback(experiment_configuration) {
