fixing bootstrap collapse on edit/show experiment configuration page

--- a/vcweb/core/templates/experimenter/edit-configuration.html
+++ b/vcweb/core/templates/experimenter/edit-configuration.html
@@ -21,7 +21,7 @@
                     </a>
                 </h4>
             </div>
-            <div id="collapseTwo" class="panel-collapse">
+            <div id="collapseTwo" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <div data-bind='if: expParamValuesList().length == 0'>
                         <div class="callout callout-warning">
@@ -52,7 +52,7 @@
                     </a>
                 </h4>
             </div>
-            <div id="collapseThree" class="panel-collapse">
+            <div id="collapseThree" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <div data-bind='if: roundConfigList().length == 0'>
                         <div class="callout callout-warning">
