--- a/vcweb/core/templates/experimenter/show-configuration.html
+++ b/vcweb/core/templates/experimenter/show-configuration.html
@@ -1,16 +1,16 @@
 {% extends "experimenter/base.html" %}
 
 {% block page %}    
-    <div class="panel-group col-md-6" id="accordion">
+    <div class="panel-group col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapseTwo">
+                    <a data-toggle="collapse" href="#collapseOne">
                         Experiment Configuration Metadata
                     </a>
                 </h4>
             </div>
-            <div id="collapseTwo" class="panel-collapse">
+            <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <table class="table table-striped">
                         <tbody>
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="panel-group col-md-6" id="accordion">
+    <div class="panel-group col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -36,7 +36,7 @@
                     </a>
                 </h4>
             </div>
-            <div id="collapseTwo" class="panel-collapse">
+            <div id="collapseTwo" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <div data-bind='if: expParamValuesList().length == 0'>
                         <div class="callout callout-warning">
@@ -62,7 +62,7 @@
                     </a>
                 </h4>
             </div>
-            <div id="collapseThree" class="panel-collapse">
+            <div id="collapseThree" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <div data-bind='if: roundConfigList().length == 0'>
                         <div class="callout callout-warning">
